--- a/blank.html
+++ b/blank.html
@@ -68,6 +68,7 @@
                 <a href="#" class="btn btn-primary" role="button"><i class="glyphicon glyphicon-align-left"></i>button</a>
                 <a href="#" class="btn btn-warning" role="button"><i class="glyphicon glyphicon-align-left"></i>button</a>
             </div>
+            <h2 class="text-center"><i class="fa fa-2x fa-spinner fa-spin" style="color: red"></i>This is awesome fonts - cab</h2>
         </div>
 
     </div>
